[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mass-json"
version = "0.0.2"
authors = [
  { name="♥ Mass ♥", email="heyitsmassacre@gmail.com" },
]
description = "A mediocre JSON parser"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/heyitsmass/mass-json"
"Bug Tracker" = "https://github.com/heyitsmass/mass-json/issues"
